chore: add dummy content
AV-136

--- a/apps/docs/pages/support.mdx
+++ b/apps/docs/pages/support.mdx
@@ -1,11 +1,11 @@
 ---
-title: 'Hello Creators'
+title: 'User Guides'
 date: '08-06-2023'
 ---
 
 <div className="prose dark:prose-invert lg:prose-lg">
 
-# Hello World!
+# Hello World Support Page!
 
 Welcome to the AI-powered app documentation site. If our AI were any smarter, it would probably write this guide itself, but we decided to keep some jobs for humans.
 
