chore: open-graph edits
AV-128

--- a/apps/web/content/posts/and-voila-ai-raises-pre-seed.mdx
+++ b/apps/web/content/posts/and-voila-ai-raises-pre-seed.mdx
@@ -61,4 +61,4 @@ With this infusion of pre-seed funding, And Voila is taking a stand against synt
 
 If you're ready for a creative experience that's real, vibrant, and utterly distinct, join us on this journey where we prioritize authenticity, champion originality, and cultivate a creative process that's uniquely yours.
 
-No more settling for the mundane. Break free with And Voila. [Get started today!](/sign-up)
+No more settling for the mundane. Break free with And Voila. [Get started today!](https://app.andvoila.ai/sign-up)
