chore(apps/docs): update draft style guide
- Updated some settings and config
- Fixed linting and prettier issues
- Added "ignoreCommand": "npx turbo-ignore" to vercel.json

Internal Coding Style Guide #30

--- a/apps/docs/pages/internal/index.mdx
+++ b/apps/docs/pages/internal/index.mdx
@@ -1,87 +1,45 @@
 ---
-title: 'Internal Welcome'
+title: 'Embrace Excellence: TypeScript Style Guide'
 date: '08-06-2023'
+description: 'Guiding your coding journey with And Voila AI’s best practices in TypeScript. Inspired by the greats, customized for creativity.'
 ---
 
-# Internal Welcome!
+import { Callout } from 'nextra-theme-docs';
 
-Welcome to the AI-powered app documentation site. If our AI were any smarter, it would probably write this guide itself, but we decided to keep some jobs for humans.
+## Code Style Guide
 
-## Table of Contents
+This is not just a guide; it's a compass to excellence in coding at And Voila AI. Adapted from renowned sources, it's tailored to our unique creative culture and tech stack.
 
-1. [Headers](#headers) - The Shouty Bits
-2. [Links](#links) - Internet's Rabbit Holes
-3. [Images](#images) - Worth a Thousand Typos
-4. [Code Blocks](#code-blocks) - Nerds' Poetry
-5. [Lists](#lists) - Organized Chaos
-6. [Tables](#tables) - Not the Furniture
-7. [Quotes](#quotes) - Wisdom or Nonsense?
+<Callout>
+  A big shoutout to **[mkosir](https://github.com/mkosir)** for their
+  **[comprehensive TypeScript Style
+  Guide](https://github.com/mkosir/typescript-style-guide)** that got us
+  started.
+</Callout>
 
-### Headers
+### Why TypeScript?
 
-Headers are the loud neighbors of the text world. They're always shouting, but at least they make themselves clear.
+TypeScript is more than just a language; it's the backbone of our entire development ecosystem. At And Voila AI, we use TypeScript to ensure:
 
-# H1 - "I'm the boss here!"
+- **Strong Typing**: Safety first! Catch errors early and code with confidence.
+- **Scalability**: Our entire stack is TS optimized. It makes scaling our apps and packages consistent and efficient.
+- **Team Collaboration**: Shared understanding and consistency across all codebases.
+- **Robustness**: From the [Turborepo](https://turbo.build) to our shared UI components, TypeScript ensures our code is robust and maintainable.
 
-## H2 - "Look at me, I'm important too!"
+### TS Optimized Stack
 
-### H3 - "Hey, don't forget about me!"
+We’ve chosen tools that synergize with TypeScript, forming a cohesive unit:
 
-#### H4 - "I'm still here, just a bit quieter."
+- [Next JS](https://nextjs.org): Powering fast, seamless user experiences.
+- [TypeScript](https://www.typescriptlang.org): Our core, enforcing quality through strong typing.
+- [Wundergraph](https://wundergraph.com): Streamlining workflows with next-gen BFF framework.
+- [Upstash](https://upstash.com): Serverless Data Platform, combining speed and cost-efficiency.
+- [Neon Serverless Postgres](https://neon.tech): Postgres with autoscaling and branching possibilities.
+- [Tailwind CSS](https://tailwindcss.com): Elegant, efficient designs.
+- [Radix UI](https://radix-ui.com): Accessibility meets charm.
+- [shadcn/ui](https://github.com/shadcn/ui): The brush for our digital canvas.
+- [Vercel](https://vercel.com): Smooth, fast web hosting.
 
-##### H5 - "Can anyone hear me?"
+### Your Role
 
-###### H6 - "Okay, I'll just whisper then."
-
-### Links
-
-Links are like portals to other dimensions. Click one, and who knows where you'll end up? Probably distracted.
-
-[Click here if you dare](https://example.com)
-
-### Images
-
-Images are here to save you when words fail. Because who reads nowadays?
-
-### Code Blocks
-
-Code blocks are like poetry for nerds. Beautiful, elegant, and utterly incomprehensible to most people.
-
-```javascript
-export default {
-  useNextSeoProps() {
-    const { asPath } = useRouter();
-    if (asPath !== '/') {
-      return {
-        titleTemplate: '%s – SWR',
-      };
-    }
-  },
-};
-```
-
-## Lists
-
-Lists are for people who love order but hate tables. They're like the Marie Kondo of text.
-
-- Unordered chaos
-- Chaos with bullets
-  - Chaos within chaos
-
-1. Ordered chaos
-2. Chaos with numbers
-
-## Tables
-
-Tables are like lists, but with commitment issues. They can't decide what they want to be, so they're everything at once.
-
-| Header 1     | Header 2        |
-| ------------ | --------------- |
-| Cell 1 - Bed | Cell 2 - Sofa   |
-| Cell 3 - TV  | Cell 4 - Fridge |
-
-## Quotes
-
-Quotes are when you want to sound wise but don't want to think too hard.
-
-> "This is a blockquote. It's like a quote but with a block. Profound, right?"
+You are not just a coder; you're a creator, an innovator. Follow this guide to align your contributions with our collective creativity. This guide will help you write code that's elegant, efficient, and aligned with our culture and values. No Table of Contents needed – each section is a note in our coding ensemble.
