--- a/cursor-prompts/vercel-ai/api-reference/ai-stream.mdx
+++ b/cursor-prompts/vercel-ai/api-reference/ai-stream.mdx
@@ -32,7 +32,7 @@ This is an optional parameter which is an object that contains callback function
 
 ```tsx
 interface AIStreamParser {
-  (data: string): string | void
+  (data: string): string | void;
 }
 ```
 
@@ -40,30 +40,32 @@ interface AIStreamParser {
 
 This is an object that contains the following properties:
 
+```
 <OptionTable
-options={[
-[
-'onStart',
-'() => Promise<void>',
-'An optional function that is called at the start of the stream processing.',
-],
-[
-'onCompletion',
-'(completion: string) => Promise<void>',
-"An optional function that is called for every completion. It's passed the completion as a string.",
-],
-[
-'onFinal',
-'(completion: string) => Promise<void>',
-"An optional function that is called once for every request. It's passed the completion as a string. Differs from onCompletion when function calls are present.",
-],
-[
-'onToken',
-'(token: string) => Promise<void>',
-"An optional function that is called for each token in the stream. It's passed the token as a string.",
-],
-]}
+  options={[
+    [
+      'onStart',
+      '() => Promise<void>',
+      'An optional function that is called at the start of the stream processing.',
+    ],
+    [
+      'onCompletion',
+      '(completion: string) => Promise<void>',
+      "An optional function that is called for every completion. It's passed the completion as a string.",
+    ],
+    [
+      'onFinal',
+      '(completion: string) => Promise<void>',
+      "An optional function that is called once for every request. It's passed the completion as a string. Differs from onCompletion when function calls are present.",
+    ],
+    [
+      'onToken',
+      '(token: string) => Promise<void>',
+      "An optional function that is called for each token in the stream. It's passed the token as a string.",
+    ],
+  ]},
 />
+```
 
 ## Example: Using `AIStream` to create [`AnthropicStream`](./anthropic-stream)
 
