style: check and update front end styles globally #29
- updated styles for home page
- moved `TailwindRwd` utility component to global

--- a/apps/web/content/use-cases/generate-edit-amazing-ai-videos.mdx
+++ b/apps/web/content/use-cases/generate-edit-amazing-ai-videos.mdx
@@ -5,7 +5,7 @@ benefit: Your time maximizer
 feature: Visuals
 title: Masterful Edits Minus the Workload
 description: And Voila's AI video editor helps you quickly produce pro-level edits, effects, transitions and more without needing years of experience.
-buttonText: Unlock inner Greta Gerwig
+buttonText: Unlock inner Greta
 testimonialAuthor: Akua Abimbola
 testimonialAuthorRole: Indie filmmaker
 testimonial: I can explore 100 different creative directions in the time it used to take to finalize just one thanks to And Voila turbocharging my video editing workflow.
